# rust-dwm-status

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: .main.rs.swp  main.rs
